Experiment with dependabot

--- a/maven-plugin-report-plugin/pom.xml
+++ b/maven-plugin-report-plugin/pom.xml
@@ -36,7 +36,7 @@
     </description>
 
     <prerequisites>
-        <maven>${mavenVersion}</maven>
+        <maven>3.2.5</maven>
     </prerequisites>
 
     <properties>
