--- a/maven-plugin-report-plugin/src/it/fix-maven-since-3.x/javasample-maven-plugin/pom.xml
+++ b/maven-plugin-report-plugin/src/it/fix-maven-since-3.x/javasample-maven-plugin/pom.xml
@@ -43,7 +43,7 @@
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
-      <version>@mavenVersion@</version>
+      <version>3.2.5</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
