--- a/maven-plugin-report-plugin/src/it/mplugin-191/pom.xml
+++ b/maven-plugin-report-plugin/src/it/mplugin-191/pom.xml
@@ -43,7 +43,7 @@ under the License.
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
-      <version>@mavenVersion@</version>
+      <version>3.2.5</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
